# computer-use-raw-python-executor

./: .gitignore  README.md  STAGE_PROFILE.md  launch_executor.py  pyproject.toml
docs/: EXECUTOR_CONTRACT.md  LOOP_ARCHITECTURE.md
runbooks/: QUICKSTART.md
src/computer_use_raw_python_executor/: __init__.py  cli.py  models.py  runner.py
tests/: test_cli.py  test_runner.py
